<resources>
    <string name="app_name">Christmas Tree</string>

    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sing up</string>
    <string name="answer">Ответить</string>
    <string name="close">Закрыть</string>
    <string name="exit">Log out</string>
    <string name="rating">Rating</string>
    <string name="choose_table">Выберите таблицу:</string>
    <string name="table_data">Данные таблицы</string>

    <string name="add">Добавить</string>
    <string name="update">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="back">Назад</string>

    <string name="enter_id">Введите id</string>
    <string name="enter_foreign_id">Введите id для foreign key</string>
    <string name="enter_text">Введите текст</string>
    <string name="enter_number">Введите число</string>

    <string name="saveJson">Сохранить таблицу в JSON</string>
    <string name="readJson">Загрузить таблицу из JSON</string>

    <string name="try_answer">Ещё разок</string>
    <string name="choose_answer">Выберите ответ</string>

    <string name="congrats">Merry Christmas and happy New Year!</string>
    <string name="required_name">Enter your name, please</string>
    <string name="grow_tree">Grow your tree!</string>

    <string name="user_score">Score: </string>
    <string name="tree_level">Tree level: </string>

    <string name="test_text">test text 123</string>
    <string name="image_descr">IMAGE</string>
    
    <string name="hint_question_table_foreign_key">Введите ID темы</string>
    <string name="hint_answer_table_foreign_key">Введите ID вопроса</string>
    <string name="hint_answer_table_number">Введите правильность ответа</string>

    <string name="instruction_table_answer_add">Работа с таблицей Answers<br/>
        --- Добавление ---<br/>
        Обязательно нужно ввести:<br/>
        1) ID вопроса(foreign key)<br/>
        2) Текст ответа<br/>
        3) Правильность ответа<br/></string>

    <string name="instruction_table_answer_update">Работа с таблицей Answers<br/>
        --- Обновление ---<br/>
        Обязательно нужно ввести:<br/>
        1) ID вопроса(foreign key)<br/>
        2) ID ответа
        3) Текст ответа<br/>
        4) Правильность ответа<br/></string>

    <string name="instruction_table_answer_delete">Работа с таблицей Answers<br/>
        --- Удаление ---<br/>
        Обязательно нужно ввести:<br/>
        1) ID ответа<br/></string>


    <string name="instruction_table_theme_add">Работа с таблицей Themes<br/>
        --- Добавление ---<br/>
        Обязательно нужно ввести:<br/>
        1) Текст темы<br/>
    </string>

    <string name="instruction_table_theme_update">Работа с таблицей Themes<br/>
        --- Обновление ---<br/>
        Обязательно нужно ввести:<br/>
        1) ID темы<br/>
        2) Текст темы<br/>
    </string>

    <string name="instruction_table_theme_delete">Работа с таблицей Themes<br/>
        --- Удаление ---<br/>
        Обязательно нужно ввести:<br/>
        1) ID темы<br/>
    </string>

    <string name="instruction_table_question_add">Работа с таблицей Questions<br/>
        --- Добавление ---<br/>
        Обязательно нужно ввести:<br/>
        1) ID темы (foreign key)<br/>
        2) Текст вопроса<br/>
    </string>

    <string name="instruction_table_question_update">Работа с таблицей Questions<br/>
        --- Обновление ---<br/>
        Обязательно нужно ввести:<br/>
        1) ID вопроса<br/>
        2) Текст вопроса<br/>
        3) ID вопроса<br/>
    </string>

    <string name="instruction_table_question_delete">Работа с таблицей Questions<br/>
        --- Удаление ---<br/>
        Обязательно нужно ввести:<br/>
        1) ID вопроса<br/>
    </string>

    <string name="instruction_table_user_update">Работа с таблицей Users<br/>
        --- Обновление ---<br/>
        Обязательно нужно ввести:<br/>
        1) ID пользователя
    </string>

    <string name="instruction_table_user_delete">Работа с таблицей Users<br/>
        --- Удаление ---<br/>
        Обязательно нужно ввести:<br/>
        1) ID пользователя
    </string>

    <string name="tutorial_text1">
        С Рождеством и Новым годом!
        А теперь к самому обучению.
        В данной игре вам предстоит вырастить саму красивую ёлку, отвечая на вопросы
        о том, как проводят Рождество или Новый год в различных странах.
    </string>

    <string name="tutorial_text2">По нажатию на кнопку вам высветиться окно с темой вопроса,
        самим вопросмо и вариантами ответа на него. Ваша задача выбрать правильный по вашему мнению
        и нажать на кнопку "Ответить".
        Учтите, вам даётся на раздумья 30 секунд!
    </string>

    <string name="tutorial_text3">
        Если вы ответили правильно, то ваша ёлочка вырастет, вы получите очки(+10) и вам придётся подождать
        некоторое время, чтобы снова повторить сие действие.
        Если же вы ответили неправильно, у вас есть ещё 2 попытки на то, чтобы вернуть потерянный прогресс.
        За неправильный ответ падает не только уровень ёлочки, но ещё и ваш общий счёт(-5).
        (Попытки восстанавливаются путём перезахода в игру)
    </string>

    <string name="tutorial_text4">Что ж, дерзайте, отвечайте и всего вам хорошего в Новом году!</string>
</resources>