<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DB.activities.AddDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/instruction"
            style="@style/InstructionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/set_id"
            style="@style/MainTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_id"
            android:inputType="number" />

        <EditText
            android:id="@+id/set_foreign_id"
            style="@style/MainTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_foreign_id"
            android:inputType="number" />

        <EditText
            android:id="@+id/set_text"
            style="@style/MainTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text"
            android:inputType="text" />

        <EditText
            android:id="@+id/set_number_param"
            style="@style/MainTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number"
            android:inputType="number" />

        <Button
            android:id="@+id/add_to_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>