<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tutorial1"
        android:layout_margin="@dimen/tiny_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tutorial_text1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tutorial2"
        android:layout_margin="@dimen/tiny_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tutorial_text2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tutorial3"
        android:layout_margin="@dimen/tiny_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tutorial_text3"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tutorial4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tiny_margin"
        android:text="@string/tutorial_text4"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/close_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        style="@style/VariantsButtons"/>

</LinearLayout>