<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/activity_authentication"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congrats"
            android:textAlignment="center"
            android:textColor="@color/christmas_red"
            android:textSize="21sp" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginTop="145dp"
            android:layout_marginRight="@dimen/small_margin"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textVisiblePassword"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editPassword"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_weight="1"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/button_reg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_weight="1"
                android:text="@string/sign_up" />

        </LinearLayout>

        <ImageView
            android:layout_below="@+id/btn_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="tree_image"
            android:src="@drawable/christmas_tree_256"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>